# zenmark

./: CMakeLists.txt  hwmon.c  hwmon.h  main.cpp  util.hpp
